Issue #2561583 by tompagabor: LCS-102 Fixed heights on variation block card wrapper is too small

--- a/css/acquia_lift.admin.css
+++ b/css/acquia_lift.admin.css
@@ -499,7 +499,7 @@ input[type="submit"].acquia-lift-wizard-add:hover {
 }
 
 #edit-variations .el-card:not(.is-compact) .el-card__content {
-  max-height: 200rem;
+  max-height: 2000rem;
 }
 
 .personalize-wizard-section .acquia-lift-preview {
